--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,10 +9,15 @@
 
 input[type="text"],
 input[type="password"],
-input[type="email"] {
+input[type="email"],
+input[type="textarea"]
+ {
   @apply w-full border-2 border-bg_dark_section rounded-md py-2 px-4 text-black;
 }
 
+textarea{
+  @apply w-full border-2 border-bg_dark_section rounded-md py-2 px-4 text-black min-h-[200px];
+}
 .btn {
   @apply w-full bg-bg_dark_section rounded-md py-2.5 px-4 text-bg_white  hover:scale-95 hover:bg-bg_red duration-200;
 }
