T39-Block-Page-API-And-UI-Page-Done

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,8 +3,9 @@
 @tailwind utilities;
 
 * {
-  /*  font-family: "Poppins", sans-serif; */
-  font-family: "Raleway", sans-serif;
+   font-family: "Poppins", sans-serif;
+  /* font-family: "Raleway", sans-serif; */
+  /* font-family: 'Rubik', sans-serif; */
 }
 
 input[type="text"],
