T45-Room-Wise-Student-Display-Done

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -31,6 +31,14 @@ textarea {
   @apply bg-bg_dark_section text-bg_white rounded-xl shadow-md border-4 border-bg_white;
 }
 
+.labels_2 {
+  @apply bg-bg_red text-bg_white text-sm rounded-md py-1 px-2 shadow-md;
+}
+
+.labels_3 {
+  @apply bg-bg_dark_section text-sm text-bg_white rounded-md py-1 px-2 shadow-md;
+}
+
 .red-hover {
   @apply hover:scale-95 hover:bg-bg_red hover:text-bg_white_font duration-200;
 }
